--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
           class="flexContainer__box flexContainer__box--radius-big pX-2 pY-3 text-center"
         >
           <img
-            src="images/home/actualizacion.png"
+            src="images/home/app2.jpg"
             alt=""
             class="flexContainer__img"
           />
