--- a/identidad.html
+++ b/identidad.html
@@ -36,25 +36,25 @@
             <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
-                <a href="blockchainv2.html">Tokenización</a>
+                <a href="desarrolloweb.html">Desarrollo web</a>
               </li>
               <li>
-                <a href="lanzamientoTokens.html">Lanzamiento de tokens</a>
+                <a href="desarrolloSoftware.html">Desarrollo software</a>
               </li>
               <li>
-                <a href="blockchainNft.html">NFT</a>
+                <a href="funnel.html">Funnel</a>
               </li>
               <li>
-                <a href="trazabilidad.html">Trazabilidad</a>
+                <a href="identidad.html">Identidad corporativa</a>
               </li>
               <li>
-                <a href="consultoriaBlockChain.html">Desarrollo blockchain</a>
+                <a href="socialMedia.html">Social Media</a>
               </li>
               <li>
-                <a href="metaverso.html">Metaverso</a>
+                <a href="tienda.html">Tienda online</a>
               </li>
               <li>
-                <a href="pasarelaPago.html">Pasarelas de pago</a>
+                <a href="index.html">Aplicacion movil</a>
               </li>
               <li>
                 <a href="nativoSmart.html">Smart Contract</a>
@@ -365,44 +365,56 @@
         Aquí te dejamos un ejemplo:
       </p>
 
-      <div class="d-flex flex-direction-column row-medium gap-3 mT-3">
+      <div
+        class="d-flex flex-direction-column row-landscape align-items-center gap-3 mT-3"
+      >
         <div class="flex-1 text-center">
-          <a href="#" class="c-main fs-small">
+          <a
+            href="https://drive.google.com/file/d/0B0Tax0-x9mbxMUNzc01ES3VMZjQ/view?resourcekey=0-aWYXs32gknjYd382KHdR4Q"
+            class="c-main fs-small"
+            target="_blank"
+          >
             Spotify Partner Guidelines Logo & Colour + Messaging
           </a>
-          <iframe
-            src="https://drive.google.com/file/d/0B0Tax0-x9mbxMUNzc01ES3VMZjQ/preview?resourcekey=0-aWYXs32gknjYd382KHdR4Q"
-            allow="autoplay"
-            loading="lazy"
-            frameborder="0"
-            class="w-100 mT-3"
-          ></iframe>
+          <img
+            src="images/identidad/spotify.png"
+            alt=""
+            class="d-block w-100 mT-3"
+          />
         </div>
 
         <div class="flex-1 text-center">
-          <a href="#" class="c-main fs-small"> Pepsi Brand Guidelines </a>
-          <iframe
-            src="https://drive.google.com/file/d/0B0Tax0-x9mbxSWlud25QVmx1NlU/preview?resourcekey=0-c0HL40P_qvNKS1skr3-iyQ"
-            allow="autoplay"
-            loading="lazy"
-            frameborder="0"
-            class="w-100 mT-3"
-          ></iframe>
+          <a
+            href="https://drive.google.com/file/d/0B0Tax0-x9mbxSWlud25QVmx1NlU/view?resourcekey=0-c0HL40P_qvNKS1skr3-iyQ"
+            class="c-main fs-small"
+            target="_blank"
+          >
+            Pepsi Brand Guidelines
+          </a>
+          <img
+            src="images/identidad/pepsi.png"
+            alt=""
+            class="d-block w-100 mT-3"
+          />
         </div>
 
         <div class="flex-1 text-center">
-          <a href="#" class="c-main fs-small"> Xbox Live Brand Guidelines </a>
-          <iframe
-            src="https://drive.google.com/file/d/0B0Tax0-x9mbxbUd1cjE5ejJfQ0E/preview?resourcekey=0-JCrw2aKqMPLB0v29XcUMsQ"
-            allow="autoplay"
-            loading="lazy"
-            frameborder="0"
-            class="w-100 mT-3"
-          ></iframe>
+          <a
+            href="https://drive.google.com/file/d/0B0Tax0-x9mbxbUd1cjE5ejJfQ0E/view?resourcekey=0-JCrw2aKqMPLB0v29XcUMsQ"
+            class="c-main fs-small"
+            target="_blank"
+          >
+            Xbox Live Brand Guidelines
+          </a>
+          <img
+            src="images/identidad/xbox.png"
+            alt=""
+            class="d-block w-100 mT-3"
+          />
         </div>
       </div>
 
-      <div class="text-center mT-3">
+      <div class="text-center mT-9">
         <p class="fw-bold fs-2">
           Finalmente, te haremos entrega de todo esto para que puedas empezar a
           implementarlo.
@@ -410,7 +422,7 @@
       </div>
     </section>
 
-    <section class="bg-green-light bg pY-10 mT-5">
+    <section class="bg-green-light bg pY-10 mT-9">
       <div class="container">
         <div class="text-center">
           <h2 class="c-main fs-3">
