--- a/socialMedia.html
+++ b/socialMedia.html
@@ -21,7 +21,7 @@
 
     <!-- js -->
     <script src="js/servicio.js" defer></script>
-    
+
     <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -91,7 +91,9 @@
         class="container d-flex align-items-center flex-direction-column row-medium gap-5"
       >
         <div class="flex-1 fs-2">
-          <h3 class="c-main-blue fw-300 fs-3">Crea un vínculo único con tus clientes</h3>
+          <h3 class="c-main-blue fw-300 fs-3">
+            Crea un vínculo único con tus clientes
+          </h3>
           <h2 class="line-height-md mT-1">
             Convertimos tus redes sociales en una extensión de tu negocio
           </h2>
@@ -186,7 +188,7 @@
         <h2>¿Cómo conseguimos que tus seguidores se quiten el abrigo?</h2>
       </div>
 
-      <div class="abrigo__content d-flex flex-wrap mT-5">
+      <div class="abrigo__content d-flex flex-wrap mT-9">
         <div>
           <header class="d-flex align-items-center gap-3">
             <img
