--- a/tienda.html
+++ b/tienda.html
@@ -365,15 +365,15 @@
 
     <section class="bg-multicolor pY-10 mT-9">
       <div
-        class="container d-flex flex-direction-column align-items-center row-medium gap-2"
+        class="container d-flex flex-direction-column row-medium gap-2"
       >
-        <div>
+        <div class="d-flex flex-direction-column justify-content-between">
           <div class="bg-white flexContainer__box--radius-big pY-3 pX-2">
             <h2 class="c-main-blue text-transform-uppercase fs-2">
               plantillas personalizables
             </h2>
 
-            <p class="fs-small mT-2">
+            <p class="fs-small line-height-md mT-2">
               Multiplica las conversiones gracias a un diseño web único
               ¡Personalizamos completamente tu tienda online para que sea única
               y adaptable!
@@ -382,78 +382,72 @@
 
           <div class="bg-white flexContainer__box--radius-big pY-3 pX-2 mT-5">
             <h2 class="c-main-blue text-transform-uppercase fs-2">
-              plantillas personalizables
+              Backoffice
             </h2>
 
-            <p class="fs-small mT-2">
-              Multiplica las conversiones gracias a un diseño web único
-              ¡Personalizamos completamente tu tienda online para que sea única
-              y adaptable!
+            <p class="fs-small line-height-md mT-2">
+              Panel de control sencillo, accesible e intuitivo ¡Gestiona varias
+              tiendas online simultáneamente!
             </p>
           </div>
 
           <div class="bg-white flexContainer__box--radius-big pY-3 pX-2 mT-5">
-            <h2 class="c-main-blue text-transform-uppercase fs-2">
-              plantillas personalizables
-            </h2>
+            <h2 class="c-main-blue text-transform-uppercase fs-2">módulos</h2>
 
-            <p class="fs-small mT-2">
-              Multiplica las conversiones gracias a un diseño web único
-              ¡Personalizamos completamente tu tienda online para que sea única
-              y adaptable!
+            <p class="fs-small line-height-md mT-2">
+              Potencia y mejora tu eCommerce añadiendo funcionalidades en tu
+              tienda online con los móodulos de PrestaShop
             </p>
           </div>
         </div>
 
-        <div class="text-center">
+        <div class="text-center align-self-center">
           <h2 class="fs-md c-blue-secondary">Ventajas y funcionalidades</h2>
           <img src="images/tienda/tienda-01.png" alt="" class="w-100" />
         </div>
 
-        <div>
+        <div class="d-flex flex-direction-column justify-content-between">
           <div class="bg-white flexContainer__box--radius-big pY-3 pX-2">
             <h2 class="c-main-blue text-transform-uppercase fs-2">
-              plantillas personalizables
+              pago online
             </h2>
 
-            <p class="fs-small mT-2">
-              Multiplica las conversiones gracias a un diseño web único
-              ¡Personalizamos completamente tu tienda online para que sea única
-              y adaptable!
+            <p class="fs-small line-height-md mT-2">
+              Más de 50 soluciones y pasarelas de pago para las ventas de tu
+              tienda online.¡Elige las que mejor se adapten a tu negocio!
             </p>
           </div>
 
           <div class="bg-white flexContainer__box--radius-big pY-3 pX-2 mT-5">
             <h2 class="c-main-blue text-transform-uppercase fs-2">
-              plantillas personalizables
+              opciones de envío
             </h2>
 
-            <p class="fs-small mT-2">
-              Multiplica las conversiones gracias a un diseño web único
-              ¡Personalizamos completamente tu tienda online para que sea única
-              y adaptable!
+            <p class="fs-small line-height-md mT-2">
+              Establece tus métodos de envío, gestiona zonas geográficas y
+              transportistas, y además configura los gastos de envío
             </p>
           </div>
 
           <div class="bg-white flexContainer__box--radius-big pY-3 pX-2 mT-5">
             <h2 class="c-main-blue text-transform-uppercase fs-2">
-              plantillas personalizables
+              expansión internacional
             </h2>
 
-            <p class="fs-small mT-2">
-              Multiplica las conversiones gracias a un diseño web único
-              ¡Personalizamos completamente tu tienda online para que sea única
-              y adaptable!
+            <p class="fs-small line-height-md mT-2">
+              Expande tu negocio en el extranjero con el sistema multimedia
+              PrestaShop. ¡adapta y gestiona todas tus tiendas fácil e
+              intuitivamente!
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="bg-green-light bg pY-10 mT-5">
+    <section class="pY-10 mT-5">
       <div class="container">
         <div class="text-center">
-          <h2 class="c-main fs-3">
+          <h2 class="fs-3">
             ¿Cómo puedes empezar a trabajar en la identidad corporativa de tu
             proyecto?
           </h2>
