--- a/identidad.html
+++ b/identidad.html
@@ -56,9 +56,6 @@
               <li>
                 <a href="index.html">Aplicacion movil</a>
               </li>
-              <li>
-                <a href="nativoSmart.html">Smart Contract</a>
-              </li>
             </ul>
           </li>
           <li>
@@ -533,12 +530,11 @@
               </li>
             </ul>
 
-            <a
-              href="#"
+            <button
               class="btn bg-black flexContainer__box--radius c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
             >
               seleccionar
-            </a>
+            </button>
           </div>
 
           <div
@@ -621,14 +617,21 @@
               </li>
             </ul>
 
-            <a
-              href="#"
+            <button
               class="btn bg-white c-black flexContainer__box--radius w-100 text-transform-uppercase fs-md pY-2 mT-5"
             >
               seleccionar
-            </a>
+            </button>
           </div>
         </div>
+
+        <p class="c-main line-height-md text-center fs-2 mT-5">
+          Junto a los entregables que te entreguemos, contarás con un juego
+          completo de logos y badges en formato vectorial (.ai, .eps), formato
+          de alta resolución bitmap CMYK (tiff, .jpg) y de baja resolución Web
+          RGB (.png, .gif). y además tu libro de estilo corporativo de tu marca
+          para que lo puedas utilizar siempre que lo necesites.
+        </p>
       </div>
     </section>
 
