--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -36,28 +36,25 @@
             <a href="#nav" class="servicio">servicios</a>
             <ul class="dropdown__content">
               <li>
-                <a href="blockchainv2.html">Tokenización</a>
+                <a href="desarrolloweb.html">Desarrollo web</a>
               </li>
               <li>
-                <a href="lanzamientoTokens.html">Lanzamiento de tokens</a>
+                <a href="desarrolloSoftware.html">Desarrollo software</a>
               </li>
               <li>
-                <a href="blockchainNft.html">NFT</a>
+                <a href="funnel.html">Funnel</a>
               </li>
               <li>
-                <a href="trazabilidad.html">Trazabilidad</a>
+                <a href="identidad.html">Identidad corporativa</a>
               </li>
               <li>
-                <a href="consultoriaBlockChain.html">Desarrollo blockchain</a>
+                <a href="socialMedia.html">Social Media</a>
               </li>
               <li>
-                <a href="metaverso.html">Metaverso</a>
+                <a href="tienda.html">Tienda online</a>
               </li>
               <li>
-                <a href="pasarelaPago.html">Pasarelas de pago</a>
-              </li>
-              <li>
-                <a href="nativoSmart.html">Smart Contract</a>
+                <a href="index.html">Aplicacion movil</a>
               </li>
             </ul>
           </li>
