some fixes done

--- a/desarrolloSoftware.html
+++ b/desarrolloSoftware.html
@@ -304,7 +304,7 @@
 
               <a
                 href="#"
-                class="btn btn--radiusBig btn--box-shadow bg-green-dark pX-3 pY-1 c-white fs-md fw-600 text-transform-uppercase mT-5"
+                class="btn btn--radiusBig btn--box-shadow btn--multicolor pX-3 pY-1 c-white fs-md fw-600 text-transform-uppercase mT-5"
               >
                 cuéntanos tu proyecto
               </a>
@@ -328,7 +328,7 @@
 
         <div class="d-flex flex-direction-column row-medium gap-5 mT-5">
           <div class="flex-1 flexContainer__box--radius bg-white pY-5 pX-5">
-            <h2 class="text-center 12c-main-blue fs-md fw-300 mT-3">
+            <h2 class="text-center c-main-blue fs-md fw-300 mT-3">
               Los softwares genéricos están pensados para todos. Por eso es muy
               frecuente que:
             </h2>
@@ -442,75 +442,6 @@
               </li>
             </ul>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="tokenizar pY-8 mT-5">
-      <div class="container">
-        <div class="text-center">
-          <h2 class="fs-md fw-300">
-            Además, podrás elegir qué tipo de desarrollo se adapta mejor a tu
-            proyecto:
-          </h2>
-        </div>
-        <div class="d-flex flex-direction-column row-landscape mT-5">
-          <!-- Box -->
-          <div
-            class="flexContainer__box flexContainer__box--radius pX-2 pY-3 text-center"
-          >
-            <img
-              src="images/desarrolloSoftware/iconos/check.png"
-              alt=""
-              class="flexContainer__img flexContainer__img--md"
-            />
-            <h2 class="text-transform-uppercase fs-md c-main mT-3">
-              Aplicaciones nativas
-            </h2>
-            <p class="mT-2 flexContainer__content">
-              Si optas por un desarrollo individual para cada plataforma.
-            </p>
-          </div>
-          <!-- Box -->
-
-          <!-- Box -->
-          <div
-            class="flexContainer__box flexContainer__box--radius pX-2 pY-3 text-center"
-          >
-            <img
-              src="images/desarrolloSoftware/iconos/check.png"
-              alt=""
-              class="flexContainer__img flexContainer__img--md"
-            />
-            <h2 class="text-transform-uppercase fs-md c-main mT-3">
-              Aplicaciones multiplataforma
-            </h2>
-            <p class="mT-2 flexContainer__content">
-              Si, por el contrario, prefieres un único desarrollo para varias
-              plataformas a la vez
-            </p>
-          </div>
-          <!-- Box -->
-
-          <!-- Box -->
-          <div
-            class="flexContainer__box flexContainer__box--radius pX-2 pY-3 text-center"
-          >
-            <img
-              src="images/desarrolloSoftware/iconos/check.png"
-              alt=""
-              class="flexContainer__img flexContainer__img--md"
-            />
-            <h2 class="text-transform-uppercase fs-md c-main mT-3">
-              Aplicaciones web
-            </h2>
-            <p class="mT-2 flexContainer__content">
-              Si te interesa que sólo se realice un único desarrollo para todas
-              las plataformas y que además se pueda acceder desde un navegador
-              web.
-            </p>
-          </div>
-          <!-- Box -->
         </div>
       </div>
     </section>
