--- a/funnel.html
+++ b/funnel.html
@@ -177,7 +177,7 @@
           </div>
           <div class="columns__box columns__box--2">
             <img
-              src="images/desarrolloSoftware/conceptualizacion.png"
+              src="images/funnel/conocenos.png"
               alt=""
               class="columns__img"
               loading="lazy"
@@ -213,7 +213,7 @@
 
           <div class="columns__box columns__box--2">
             <img
-              src="images/desarrolloSoftware/diseño.png"
+              src="images/funnel/creacion.png"
               alt=""
               class="columns__img"
             />
@@ -246,7 +246,7 @@
           </div>
           <div class="columns__box columns__box--2">
             <img
-              src="images/desarrolloSoftware/desarrollo.png"
+              src="images/funnel/funnel-14.jpg"
               alt=""
               class="columns__img"
               loading="lazy"
@@ -279,7 +279,7 @@
           </div>
           <div class="columns__box columns__box--2">
             <img
-              src="images/desarrolloSoftware/testeo.png"
+              src="images/funnel/analisis.png"
               alt=""
               class="columns__img"
             />
@@ -311,7 +311,7 @@
           </div>
           <div class="columns__box columns__box--2">
             <img
-              src="images/desarrolloSoftware/lanzamiento.png"
+              src="images/funnel/emprenya-10.png"
               alt=""
               class="columns__img"
               loading="lazy"
@@ -331,7 +331,7 @@
 
         <a
           href="#"
-          class="btn flexContainer__box--radius-big bg-green-dark c-white text-transform-uppercase fs-md pY-2 pX-2 mT-5"
+          class="btn flexContainer__box--radius-big bg-blue-secondary c-white text-transform-uppercase fs-md pY-2 pX-2 mT-5"
           >os cuento de mi proyecto</a
         >
       </div>
