--- a/home.html
+++ b/home.html
@@ -146,11 +146,7 @@
         <div
           class="flexContainer__box flexContainer__box--radius-big pX-2 pY-3 text-center"
         >
-          <img
-            src="images/home/app2.jpg"
-            alt=""
-            class="flexContainer__img"
-          />
+          <img src="images/home/app2.jpg" alt="" class="flexContainer__img" />
           <h2 class="c-main text-transform-uppercase fs-md mT-3">
             Desarrollo de Aplicaciones
           </h2>
@@ -193,7 +189,8 @@
             social media
           </h2>
           <p class="mT-2 fs-small fw-300">
-            Logramos que tus clientes conozcan, confíen y recomienden tu marca.
+            Consigue captar nuevos clientes y fidelizar los que ya tienes a gran
+            escala
           </p>
         </div>
         <!-- Box -->
@@ -211,7 +208,7 @@
             tienda online
           </h2>
           <p class="mT-2 fs-small fw-300">
-            Te abrimos las puertas al mercado con más usuarios del mundo.
+            Llevamos tu negocio físico al mercado digital para que
           </p>
         </div>
         <!-- Box -->
@@ -223,7 +220,8 @@
           <img src="images/home/funnel.jpg" alt="" class="flexContainer__img" />
           <h2 class="c-main text-transform-uppercase fs-md mT-3">funnel</h2>
           <p class="mT-2 fs-small fw-300">
-            Creamos un software único pensando en las necesidades de tu negocio.
+            Diseñamos el camino que llevará a tu cliente a sacar la tarjeta de
+            crédito.
           </p>
         </div>
         <!-- Box -->
