--- a/sobreNostros.html
+++ b/sobreNostros.html
@@ -105,7 +105,9 @@
     </header>
     <!-- header finished -->
 
-    <section class="container d-flex flex-direction-column row-medium align-items-center mT-5">
+    <section
+      class="container d-flex flex-direction-column row-medium align-items-center mT-5"
+    >
       <div>
         <h2 class="fs-4">¿Cuál es nuestra misión?</h2>
 
@@ -139,7 +141,7 @@
       </div>
 
       <div>
-        <img src="images/quienesSomos/marketing-2.jpg" alt="" class="w-100">
+        <img src="images/quienesSomos/marketing-2.jpg" alt="" class="w-100" />
       </div>
     </section>
 
@@ -247,8 +249,8 @@
               social media
             </h2>
             <p class="mT-2 fs-small fw-300">
-              Logramos que tus clientes conozcan, confíen y recomienden tu
-              marca.
+              Consigue captar nuevos clientes y fidelizar los que ya tienes a
+              gran escala
             </p>
             <div class="text-center">
               <a
@@ -274,7 +276,7 @@
               tienda online
             </h2>
             <p class="mT-2 fs-small fw-300">
-              Te abrimos las puertas al mercado con más usuarios del mundo.
+              Llevamos tu negocio físico al mercado digital para que
             </p>
             <div class="text-center">
               <a
@@ -298,8 +300,8 @@
             />
             <h2 class="c-main text-transform-uppercase fs-2 mT-3">funnel</h2>
             <p class="mT-2 fs-small fw-300">
-              Creamos un software único pensando en las necesidades de tu
-              negocio.
+              Diseñamos el camino que llevará a tu cliente a sacar la tarjeta de
+              crédito.
             </p>
             <div class="text-center">
               <a
@@ -348,18 +350,14 @@
 
           <div class="team__box">
             <header>
-              <h2 class="team__name text-transform-uppercase fs-3">
-                jesús
-              </h2>
+              <h2 class="team__name text-transform-uppercase fs-3">jesús</h2>
               <h3 class="team__puesto fw-300 fs-md">Software Engineer</h3>
             </header>
           </div>
 
           <div class="team__box">
             <header>
-              <h2 class="team__name text-transform-uppercase fs-3">
-                vittor
-              </h2>
+              <h2 class="team__name text-transform-uppercase fs-3">vittor</h2>
               <h3 class="team__puesto fw-300 fs-md">Front End</h3>
             </header>
           </div>
