--- a/socialMedia.html
+++ b/socialMedia.html
@@ -21,6 +21,7 @@
 
     <!-- js -->
     <script src="js/servicio.js" defer></script>
+    <script src="js/modal.js" defer></script>
 
     <!-- Fonts -->
     <link rel="stylesheet" href="css/normalize.css" />
@@ -82,6 +83,252 @@
         </div>
       </div>
     </nav>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <form class="modal-content pago">
+        <span class="close">&times;</span>
+
+        <div class="d-flex flex-direction-reverse-column">
+          <div>
+            <h2 class="text-transform-uppercase font-jost fs-2">
+              Gestión de redes sociales
+            </h2>
+            <p class="line-height-md fs-small mT-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis modi magnam qui similique incidunt iure laborum
+              aperiam. Animi, tenetur in.
+            </p>
+
+            <ul class="pago__radioBox mT-2">
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">1</label>
+                <input type="radio" name="select" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li star -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">2</label>
+                <input
+                  type="radio"
+                  name="select"
+                  class="pago__inputRadio"
+                  checked
+                />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">3</label>
+                <input type="radio" name="select" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">4</label>
+                <input type="radio" name="select" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li star -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">5</label>
+                <input type="radio" name="select" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">6</label>
+                <input type="radio" name="select" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+            </ul>
+          </div>
+
+          <div>
+            <label class="switch">
+              <input type="checkbox" checked />
+              <span class="slider round"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="d-flex flex-direction-reverse-column mT-3">
+          <div>
+            <h2 class="text-transform-uppercase font-jost fs-2">
+              post y copywrite semanal
+            </h2>
+            <p class="line-height-md fs-small mT-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis modi magnam qui similique incidunt iure laborum
+              aperiam. Animi, tenetur in.
+            </p>
+
+            <ul class="pago__radioBox mT-2">
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">1</label>
+                <input
+                  type="radio"
+                  name="selectPost"
+                  class="pago__inputRadio"
+                />
+              </li>
+              <!-- li end -->
+              <!-- li star -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">2</label>
+                <input
+                  type="radio"
+                  name="selectPost"
+                  class="pago__inputRadio"
+                  checked
+                />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">3</label>
+                <input
+                  type="radio"
+                  name="selectPost"
+                  class="pago__inputRadio"
+                />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">4</label>
+                <input
+                  type="radio"
+                  name="selectPost"
+                  class="pago__inputRadio"
+                />
+              </li>
+              <!-- li end -->
+              <!-- li star -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">5</label>
+                <input
+                  type="radio"
+                  name="selectPost"
+                  class="pago__inputRadio"
+                />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">6</label>
+                <input
+                  type="radio"
+                  name="selectPost"
+                  class="pago__inputRadio"
+                />
+              </li>
+              <!-- li end -->
+            </ul>
+          </div>
+
+          <div>
+            <label class="switch">
+              <input type="checkbox" checked />
+              <span class="slider round"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="pago__disabled d-flex flex-direction-reverse-column mT-3">
+          <div>
+            <h2 class="text-transform-uppercase font-jost fs-2">
+              plan trimestral
+            </h2>
+            <p class="line-height-md fs-small mT-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis modi magnam qui similique incidunt iure laborum
+              aperiam. Animi, tenetur in.
+            </p>
+          </div>
+
+          <div>
+            <label class="switch">
+              <input type="checkbox" />
+              <span class="slider round"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="pago__disabled d-flex flex-direction-reverse-column mT-3">
+          <div>
+            <h2 class="text-transform-uppercase font-jost fs-2">
+              red social adicional
+            </h2>
+            <p class="line-height-md fs-small mT-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis modi magnam qui similique incidunt iure laborum
+              aperiam. Animi, tenetur in.
+            </p>
+
+            <ul class="pago__radioBox mT-2">
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">1</label>
+                <input type="radio" name="selectRed" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li star -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">2</label>
+                <input
+                  type="radio"
+                  name="selectRed"
+                  class="pago__inputRadio"
+                  checked
+                />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">3</label>
+                <input type="radio" name="selectRed" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">4</label>
+                <input type="radio" name="selectRed" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li star -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">5</label>
+                <input type="radio" name="selectRed" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+              <!-- li start -->
+              <li class="d-flex flex-direction-column align-items-center gap-1">
+                <label for="#" class="fs-small">6</label>
+                <input type="radio" name="selectRed" class="pago__inputRadio" />
+              </li>
+              <!-- li end -->
+            </ul>
+          </div>
+
+          <div>
+            <label class="switch">
+              <input type="checkbox" />
+              <span class="slider round"></span>
+            </label>
+          </div>
+        </div>
+
+        <footer class="d-flex align-items-center justify-content-between c-main fs-3 pT-2 mT-3">
+          <p class="pago__total text-transform-uppercase">TOTAL:</p>
+
+          <p class="pago__total text-transform-uppercase">300.25€</p>
+        </footer>
+      </form>
+    </div>
 
     <header class="header bg-multicolor">
       <div
@@ -479,12 +726,12 @@
               </li>
             </ul>
 
-            <a
+            <button
               href="#"
-              class="btn bg-green flexContainer__box--radius-big c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
+              class="openModal btn bg-green flexContainer__box--radius c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
             >
               <span class="d-block">Comprar</span> Ahorar
-            </a>
+            </button>
           </div>
 
           <div class="flexContainer__box--radius bg-green-dark pY-5 pX-2">
@@ -559,12 +806,11 @@
               </li>
             </ul>
 
-            <a
-              href="#"
-              class="btn bg-black flexContainer__box--radius-big c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
+            <button
+              class="openModal btn bg-black flexContainer__box--radius c-white w-100 text-transform-uppercase fs-md pY-2 mT-5"
             >
               <span class="d-block">Comprar</span> Ahorar
-            </a>
+            </button>
           </div>
         </div>
       </div>
